<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvDiagTitulo"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:text="@string/tituloDiaBuscarEvento"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/diaNombreEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/nombreEvento"
        android:inputType="text"
        android:textColor="@color/colorLetraPrincipal"
        tools:text="@string/nombreEvento" />

    <EditText
        android:id="@+id/diaCodigoEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/codigoEvento"
        android:inputType="number"
        android:textColor="@color/colorLetraPrincipal"
        tools:text="@string/codigoEvento" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDiaBusBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorbtn"
            android:onClick="onClickGuiaUsc"
            android:text="@string/btnBuscar"
            android:textColor="@color/colorLetraPrincipal"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>