<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nUbicacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".evento">

    <TextView
        android:id="@+id/tvNombreEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="163dp"
        android:text="@string/tvTituloEvento"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreEvento" />

    <TextView
        android:id="@+id/tFechaEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="310dp"
        android:text="@string/tvTituloFecha"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImagenEvento" />

    <ImageView
        android:id="@+id/ivImagenEvento"
        android:layout_width="353dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="?android:attr/actionModeSplitBackground" />

    <TextView
        android:id="@+id/tvFechaEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="236dp"
        android:text="1/1/2019"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tFechaEvento"
        app:layout_constraintTop_toBottomOf="@+id/ivImagenEvento" />

    <TextView
        android:id="@+id/tvTituloPonentes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="320dp"
        android:text="@string/tvTituloPonentes"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tFechaEvento" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvTituloUbicacion"
        android:textAllCaps="false"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvFechaEvento"
        app:layout_constraintTop_toBottomOf="@+id/ivImagenEvento" />

    <Button
        android:id="@+id/btnUbicacion"
        android:layout_width="48dp"
        android:layout_height="25dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="52dp"
        android:background="@color/colorbtn"
        android:text="2413"
        android:textAllCaps="false"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/ivImagenEvento" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="248dp"
        android:layout_height="148dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="147dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloPonentes">

        <ListView
            android:id="@+id/lvPonentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTituloDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="@string/tvTituloDescripcion" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="379dp"
        android:layout_height="111dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvTituloDescripcion"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloDescripcion" />

    <Button
        android:id="@+id/btnInscribirse"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorbtn"
        android:text="@string/btnInscribirse"
        android:textAllCaps="false"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescripcion" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorbtn"
        android:text="@string/btnCancelar"
        android:textAllCaps="false"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toEndOf="@+id/btnInscribirse"
        app:layout_constraintTop_toBottomOf="@+id/tvDescripcion" />


</android.support.constraint.ConstraintLayout>